# argos

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
3rd/: CMakeLists.txt
3rd/json/: LICENSE.MIT  README.md  note.txt
cmake/: FindZMQ.cmake
data/smb/: SMB_MUSIC_000001.flac  SMB_MUSIC_000002.flac  SMB_MUSIC_000004.flac  SMB_MUSIC_000008.flac  SMB_MUSIC_000010.flac  SMB_MUSIC_000020.flac  SMB_MUSIC_000100.flac  SMB_MUSIC_000200.flac  SMB_MUSIC_000400.flac  SMB_MUSIC_000800.flac  SMB_MUSIC_001000.flac  SMB_MUSIC_002000.flac  SMB_MUSIC_004000.flac  SMB_SOUND_000001.flac  SMB_SOUND_000002.flac  SMB_SOUND_000004.flac  SMB_SOUND_000008.flac  SMB_SOUND_000010.flac  SMB_SOUND_000020.flac  SMB_SOUND_000040.flac  SMB_SOUND_000080.flac  SMB_SOUND_000100.flac  SMB_SOUND_000200.flac  SMB_SOUND_000400.flac  SMB_SOUND_000800.flac  SMB_SOUND_001000.flac  SMB_SOUND_002000.flac  SMB_SOUND_004000.flac  SMB_SOUND_008000.flac  SMB_SOUND_400000.flac  SMB_SOUND_800000.flac  nt_extract_record.sql  nt_extract_tas.sql  pattern_tables.sql  routes.sql
doc/: MISTER.md  NESBOX.md  SETUP.md  SMB.md  old.txt
include/argos/: argos.h  config.h  main.h
include/ext/jsonext/: jsonext.h
include/ext/nfdext/: nfdext.h
include/ext/opencvext/: opencvext.h
include/ext/opensslext/: opensslext.h
include/ext/sdlext/: sdlext.h  sdlextui.h
include/ext/sqliteext/: sqliteext.h  sqliteextui.h
include/game/: game.h  gamedb.h  gamedbui.h
include/nes/: nes.h  nesceptor.h  nesdb.h  nesdbui.h  nestopiaimpl.h  nesui.h  ppux.h
include/rgmui/: rgmui.h  rgmuimain.h  window.h
include/smb/: ntextract.h  rgms.h  smb.h  smbdb.h  smbdbui.h
include/static/: config.h  main.h  static.h  staticdb.h
include/util/: arg.h  bitmanip.h  clock.h  file.h  lerp.h  nixutil.h  plotting.h  rect.h  serial.h  string.h  vector.h
nesceptor/: README.md
nesceptor/lib/: argos.kicad_sym
nesceptor/lib/argos.pretty/: DIP-40_W15.24mm_Castellated.kicad_mod
nesceptor/pcb/inconsole/: .gitignore  fp-lib-table  inconsole.kicad_pcb  inconsole.kicad_pro  inconsole.kicad_sch  sym-lib-table
scripts/: anyp.sh  export_smb_noises.py  gdq.sh  getrecs.sh  nesboxes.sh
src/: CMakeLists.txt
src/argos/: CMakeLists.txt  argos.cpp  argos.h  argosdb.cpp  argosdb.h  config.cpp  config.h  config_cmd.cpp  db_cmd.cpp  help_cmd.cpp  list_cmd.cpp  main.cpp  main.h  nesceptor_cmd.cpp  rgms_cmd.cpp  smb_cmd.cpp  smpte_cmd.cpp
src/ext/: CMakeLists.txt
src/ext/jsonext/: CMakeLists.txt  jsonext.cpp
src/ext/nfdext/: CMakeLists.txt  nfdext.cpp  nfdext.h
src/ext/opencvext/: CMakeLists.txt  opencvext.cpp  opencvext.h
src/ext/opensslext/: CMakeLists.txt  opensslext.cpp
src/ext/sdlext/: CMakeLists.txt  sdlext.cpp  sdlext.h  sdlext.txt  sdlextui.cpp  sdlextui.h
src/ext/sqliteext/: CMakeLists.txt  sqliteext.cpp  sqliteext.h  sqliteextui.cpp  sqliteextui.h
src/game/: CMakeLists.txt  game.cpp  game.h  gamedb.cpp  gamedb.h  gamedbui.cpp
src/nes/: CMakeLists.txt  nes.cpp  nes.h  nesceptor.cpp  nesdb.cpp  nesdbui.cpp  nesdbui.h  nestopiaimpl.cpp  nestopiaimpl.h  nesui.cpp  ppux.cpp
src/nesceptor/: CMakeLists.txt
src/nesceptor_firmware/: CMakeLists.txt  README.md  hello.pio  main.c
src/rgmui/: CMakeLists.txt  rgmui.cpp  rgmui.h  rgmuimain.cpp  window.cpp
src/smb/: CMakeLists.txt  ntextract.cpp  rgms.cpp  smb.cpp  smb.h  smbdb.cpp  smbdb.h  smbdbui.cpp  smbdbui.h
src/static/: CMakeLists.txt  config.cpp  config_cmd.cpp  db_cmd.cpp  help_cmd.cpp  list_cmd.cpp  main.cpp  rgms_cmd.cpp  smb_cmd.cpp  smpte_cmd.cpp  staticdb.cpp
src/util/: CMakeLists.txt  arg.cpp  arg.h  bitmanip.cpp  clock.cpp  file.cpp  file.h  nixutil.cpp  plotting.cpp  plotting.h  rect.h  serial.cpp  string.cpp  string.h  vector.h
